--- a/html/exo_afpa/exo1/stylesheet.css
+++ b/html/exo_afpa/exo1/stylesheet.css
@@ -3,7 +3,7 @@ body
     background-color: lightblue;
     text-align: justify;
     
-}
+    }
 
 
 
@@ -11,11 +11,42 @@ h1:after {
     content:' ';
     display:block;
     border:2px solid black;
-}
+    margin-bottom: 0px;
+    }
+
+
+
 h2 { font-style: Arial ;
+    margin-top: 0;
      ;}
+#xp {float: right;
+}     
 
-     img2 {
+
+footer {
+    font-size: 12px;
+}
+
+#carre {
+    list-style: square;
+}
+table {margin: 0 auto;
+;
+    border-collapse: collapse;
+    width: 500px;
+}
 
 
-     }
+
+
+tr{ border: outset 4px;
+        border-color: rgb(180, 180, 180);}
+
+        
+td{ border: outset 3px;
+    border-color: grey;}
+
+    th {background-color: white;
+        text-align: center;}
+
+       
