--- a/web/hebergement-social/www/style.css
+++ b/web/hebergement-social/www/style.css
@@ -14,7 +14,7 @@ a {color:#FF9900;}
  h1 {color: #FFFFCC;
 text-align: center;
 border-top: 1px;
-coral ;}
+}
 
 header {background-color: #843175;}
 
