--- a/html/exo_positionnement/grid/franck/style.css
+++ b/html/exo_positionnement/grid/franck/style.css
@@ -42,10 +42,47 @@ body
     grid-row:3/5;
     display: grid ;
     grid-template-columns: repeat(2,1fr);
-    grid-template-rows: repeat(2,1fr);
+    grid-template-rows:auto;
     grid-gap: 20px;
 }  
+
  .sidebar {grid-column: 5/7;
             grid-row: 3/5;}
 
 .footer {grid-column: 1/7;}
+
+@media only screen  and (max-width:799px) and (orientation: portrait)
+{
+
+    .main {grid-column: 1/7;
+            grid-row: 3/5;       
+        }
+       
+        .main article {
+            grid-column: 1/3;
+        }
+
+    .sidebar {grid-column: 1/7;
+            grid-row: 5/6; }
+    
+            .footer {grid-column: 1/7;
+                        grid-row:6/7 ;}
+
+} 
+
+@media only screen and (min-width:800px) and (max-width:966px)
+{
+        .main {grid-column: 1/7;
+            grid-row: 3/5;       
+        }
+
+        .sidebar {grid-column: 1/7;
+            grid-row: 5/6; }
+    
+        .footer {grid-column: 1/7;
+                        grid-row:6/7 ;}
+
+}
+    
+
+
